--- a/templates/articles.html
+++ b/templates/articles.html
@@ -6,7 +6,7 @@
     
         <div class="col-md-10 offset-md-3">
             <div class="col-lg-8">
-                <h3>Makaleler</h3>
+                <h3>Articles</h3>
                 <hr>
                 </div>
         </div>
@@ -16,8 +16,8 @@
         <div class="col-lg-8">
             <form>
                  {% csrf_token %} 
-                <input type="text" name = "keyword" class="input-sm" maxlength="64" placeholder="Ara...">
-              <button type="submit" class="btn btn-danger">Ara</button>
+                <input type="text" name = "keyword" class="input-sm" maxlength="64" placeholder="search...">
+              <button type="submit" class="btn btn-danger">search</button>
             </form>
       </div>
     </div>
@@ -40,7 +40,7 @@
       <!-- Author -->
       <p class="lead">
         
-        {{article.author.username}} tarafından yayınlandı
+        Posted by {{article.author.username}}
       </p>
 
       <hr>
@@ -61,7 +61,7 @@
           {{article.content|safe|truncatewords:50}}
       </p>
 
-      <a href="{% url 'article:detail' article.slug %}" class ="btn btn-danger my-3">Devamını Oku</a>
+      <a href="{% url 'article:detail' article.slug %}" class ="btn btn-danger my-3">Read more</a>
       <hr>
          
         </div>
@@ -77,7 +77,7 @@
     <div class="col-md-10 offset-md-3">
         <div class="col-lg-8">
 <div class = "alert alert-danger">
-   Makale Bulunamadı
+   Article Not Found
 </div>
 </div>
 </div>
