--- a/templates/detail.html
+++ b/templates/detail.html
@@ -12,7 +12,7 @@
       <!-- Author -->
       <p class="lead">
         
-        {{article.author.username}} tarafından yayınlandı
+         Posted by {{article.author.username}}
       </p>
 
       <hr>
@@ -37,7 +37,7 @@
 
       <hr>
 
-      <h4>Yorumlar {% if comments %}({{comments.count }}){% endif %}</h4>
+      <h4>Comments {% if comments %}({{comments.count }}){% endif %}</h4>
       <hr>
       {% if comments %}
       {% for comment in comments  %}
@@ -54,18 +54,18 @@
       
       {% else %}
       <div class ="alert alert-danger">
-        Bu makaleye herhangi bir yorum yazılmamış,ilk yorum yapan siz olun!
+        There are no comments for this article, be the first to comment!
       </div>
       {% endif %}
 
       <div class="card my-4 container">
-          <h5 class="card-header">Yorum Ekle:</h5>
+          <h5 class="card-header">Add Comment:</h5>
           <div class="card-body">
             <form method = "post" action = "{% url 'article:comment' article.slug %}">
               {% csrf_token %}
               <div class="form-group">
                   <label for="formGroupExampleInput">İsim</label>
-                  <input name = "comment_author" type="text" class="form-control" id="formGroupExampleInput" placeholder="İsminizi girin">
+                  <input name = "comment_author" type="text" class="form-control" id="formGroupExampleInput" placeholder="enter your name">
                 </div>
               <div class="form-group">
                   <label for="formGroupExampleInput">Yorum</label>
